--- a/client/friendlist.html
+++ b/client/friendlist.html
@@ -66,7 +66,7 @@
 					top: 40px;
 					left: 0px;
 					right: 0px;
-					font-size: 60px;
+					font-size: 30px;
 					font-weight: bold;
 					color: rgba(255,255,255,0.75);
 					text-shadow: 0 0 10px rgba(0,255,255,0.95);
@@ -116,17 +116,17 @@
 		<script>
 
 			var tableMale = [
-				"H", "Hydrogen", "1.00794", 1, 1,
-				"H", "Hydrogen", "1.00794", 1, 2,
-				"H", "Hydrogen", "1.00794", 2, 1,
-				"H", "Hydrogen", "1.00794", 2, 2,
+				"Ben Chong", "22", "Male", 1, 1,
+				"Hafees", "27", "Male", 3, 2,
+				"Tzu Yen", "21", "Male", 4, 1,
+				"Alex Wong", "27", "Male", 2, 2,
 			];
 
 			var tableFemale = [
-				"H", "Hydrogen", "1.00794", 3, 1,
-				"H", "Hydrogen", "1.00794",	3, 2,
-				"H", "Hydrogen", "1.00794", 4, 1,
-				"H", "Hydrogen", "1.00794", 4, 2,
+				"Aw Lee Lee", "24", "Female", 2, 1,
+				"Wu Zhi Ru", "26", "Female",	1, 2,
+				"Jeen Ching", "26", "Female", 3, 1,
+				"Erin", "26", "Female", 4, 2,
 			];
 
 			var camera, scene, renderer;
