Minor code changes

--- a/client/friendlist.html
+++ b/client/friendlist.html
@@ -39,21 +39,22 @@
 				text-align: center;
 			}
 
-			.element {
+			/*Male Element*/
+			.elementMale {
 				width: 120px;
 				height: 160px;
-				box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
-				border: 1px solid rgba(127,255,255,0.25);
+				box-shadow: 0px 0px 12px rgba(0,0,160,0.2); /*rgba(0,255,255,0.5);*/
+				border: 1px solid rgba(0,0,160,0.2); /*rgba(127,255,255,0.25);*/
 				text-align: center;
 				cursor: default;
 			}
 
-			.element:hover {
-				box-shadow: 0px 0px 12px rgba(0,255,255,0.75);
-				border: 1px solid rgba(127,255,255,0.75);
+			.elementMale:hover {
+				box-shadow: 0px 0px 12px rgba(0,0,160,0.75); /*rgba(0,255,255,0.75);*/
+				border: 1px solid rgba rgba(0,0,160,0.75); /*rgba(127,255,255,0.75);*/
 			}
 
-				.element .number {
+				.elementMale .number {
 					position: absolute;
 					top: 20px;
 					right: 20px;
@@ -61,24 +62,75 @@
 					color: rgba(127,255,255,0.75);
 				}
 
-				.element .symbol {
+				.elementMale .symbol {
 					position: absolute;
-					top: 40px;
+					top: 10px;
 					left: 0px;
 					right: 0px;
 					font-size: 30px;
 					font-weight: bold;
 					color: rgba(255,255,255,0.75);
-					text-shadow: 0 0 10px rgba(0,255,255,0.95);
+					text-shadow: 0 0 10px rgba(255,255,255,0.75);
+					/*rgba(0,255,255,0.95);*/
 				}
 
-				.element .details {
+				.elementMale .details {
 					position: absolute;
 					bottom: 15px;
 					left: 0px;
 					right: 0px;
-					font-size: 12px;
-					color: rgba(127,255,255,0.75);
+					font-size: 20px;
+					color: rgba(255,255,255,0.75);
+					/*rgba(127,255,255,0.75);*/
+				}
+
+				/*Female Element*/
+				.elementFemale {
+					width: 120px;
+					height: 160px;
+					box-shadow: 0px 0px 12px rgba(255,160,255,0.2);
+					/*rgba(0,255,255,0.5);*/
+					border: 1px solid rgba(255,160,255,0.2);
+					/*rgba(127,255,255,0.25);*/
+					text-align: center;
+					cursor: default;
+				}
+
+				.elementFemale:hover {
+					box-shadow: 0px 0px 12px rgba(255,160,255,0.75);
+					/*rgba(0,255,255,0.75);*/
+					border: 1px solid rgba(255,160,255,0.75);
+					/*rgba(127,255,255,0.75);*/
+				}
+
+					.elementFemale .number {
+						position: absolute;
+						top: 20px;
+						right: 20px;
+						font-size: 0px;
+						color: rgba(127,255,255,0.75);
+					}
+
+				.elementFemale .symbol {
+					position: absolute;
+					top: 10px;
+					left: 0px;
+					right: 0px;
+					font-size: 30px;
+					font-weight: bold;
+					color: rgba(255,255,255,0.75);
+					text-shadow: 0 0 10px rgba(255,255,255,0.75);
+					/*rgba(0,255,255,0.95);*/
+				}
+
+				.elementFemale .details {
+					position: absolute;
+					bottom: 15px;
+					left: 0px;
+					right: 0px;
+					font-size: 20px;
+					color: rgba(255,255,255,0.75);
+					/*rgba(127,255,255,0.75);*/
 				}
 
 			button {
@@ -116,17 +168,78 @@
 		<script>
 
 			var tableMale = [
-				"Ben Chong", "22", "Male", 1, 1,
-				"Hafees", "27", "Male", 3, 2,
-				"Tzu Yen", "21", "Male", 4, 1,
-				"Alex Wong", "27", "Male", 2, 2,
+				"Ben Chong", "35", "Male", 1, 1,
+				"Hafees Fadil", "27", "Male", 1, 2,
+				"Tzu Yen Lee", "42", "Male", 1, 3,
+				"Syafiq Rahim", "26", "Male", 1, 4,
+				"Najmi Radzi", "27", "Male", 1, 5,
+				"Amir Syazwan", "27", "Male", 1, 6,
+				"Amirul Aimansyah", "28", "Male", 1, 7,
+				"Collision Koh", "28", "Male", 2, 1,
+				"Ali Wahab", "28", "Male", 2, 2,
+				"Dzahiruddin Din", "26", "Male", 2, 3,
+				"Wan Paat", "33", "Male", 2, 4,
+				"Hye Fir", "27", "Male", 2, 5,
+				"Tun Muhammad", "31", "Male", 2, 6,
+				"Abdul Izri", "28", "Male", 2, 7,
+				"Ahmad Luqman", "27", "Male", 3, 1,
+				"Aizat Nazmi", "27", "Male", 3, 2,
+				"Rizwan Ali", "28", "Male", 3, 3,
+				"Tongkat Ali", "16", "Male", 3, 4,
+				"Shikh Zaid", "28", "Male", 3, 5,
+				"Zarul Saje", "25", "Male", 3, 6,
+				"Muhd Munzir", "24", "Male", 3, 7,
+				"Jonathan Joseph", "43", "Male", 4, 1,
+				"Ammar Imran", "23", "Male", 4, 2,
+				"Pak Durian", "17", "Male", 4, 3,
+				"Putu Bambu", "18", "Male", 7, 7,
+				"Mat Rojak", "17", "Male", 8, 1,
+				"Kuku Besi", "17", "Male", 8, 2,
+				"Pendekar Awan", "18", "Male", 8, 3,
+				"Tendangan Berempah", "18", "Male", 8, 4,
+				"Muhammad Hudzaifah", "22", "Male", 8, 5,
+				"Ali Baba", "19", "Male", 8, 6,
+				"Toke Tido", "17", "Male", 8, 7,
+				"ZuhairAz-Zawir", "23", "Male", 9, 1,
+				"Mustaffa Kamal", "32", "Male", 9, 2,
+				"Azim Aziz", "27", "Male", 9, 3,
+				"Faiz Razman", "21", "Male", 9, 4,
+				"Christian Onix", "36", "Male", 9, 5,
+				"Danny Romai", "22", "Male", 9, 6,
+				"Ikram Fadzli", "21", "Male", 9, 7,
+				"Nazril Ezanie", "25", "Male", 10, 1,
+				"Muhamad Zubey", "26", "Male", 10, 2,
+				"Khairul Ikhwan", "21", "Male", 10, 3,
+				"Ayie Milly", "24", "Male", 10, 4,
+				"Pembuat Dodol", "21", "Male", 10, 5,
+				"Joe Jambul", "25", "Male", 10, 6,
 			];
 
 			var tableFemale = [
-				"Aw Lee Lee", "24", "Female", 2, 1,
-				"Wu Zhi Ru", "26", "Female",	1, 2,
-				"Jeen Ching", "26", "Female", 3, 1,
-				"Erin", "26", "Female", 4, 2,
+				"Aw Lee Lee", "24", "Female", 4, 4,
+				"Wu Zhi Ru", "26", "Female",	4, 5,
+				"Jeen Ching", "26", "Female", 4, 6,
+				"Erin Adalina", "26", "Female", 4, 7,
+				"Alex Wong", "27", "Female", 5, 1,
+				"Alex Wong", "27", "Female", 5, 2,
+				"Alex Wong", "27", "Female", 5, 3,
+				"Alex Wong", "27", "Female", 5, 4,
+				"Alex Wong", "27", "Female", 5, 5,
+				"Alex Wong", "27", "Female", 5, 6,
+				"Alex Wong", "27", "Female", 5, 7,
+				"Alex Wong", "27", "Female", 6, 1,
+				"Alex Wong", "27", "Female", 6, 2,
+				"Alex Wong", "27", "Female", 6, 3,
+				"Alex Wong", "27", "Female", 6, 4,
+				"Alex Wong", "27", "Female", 6, 5,
+				"Alex Wong", "27", "Female", 6, 6,
+				"Alex Wong", "27", "Female", 6, 7,
+				"Alex Wong", "27", "Female", 7, 1,
+				"Alex Wong", "27", "Female", 7, 2,
+				"Alex Wong", "27", "Female", 7, 3,
+				"Alex Wong", "27", "Female", 7, 4,
+				"Alex Wong", "27", "Female", 7, 5,
+				"Alex Wong", "27", "Female", 7, 6,
 			];
 
 			var camera, scene, renderer;
@@ -149,26 +262,27 @@
 
 				for ( var i = 0; i < tableMale.length; i += 5 ) {
 
-					var element = document.createElement( 'div' );
-					element.className = 'element';
-					element.style.backgroundColor = 'rgba(0,127,127,' + ( Math.random() * 0.5 + 0.25 ) + ')';
+					var elementMale = document.createElement( 'div' );
+					elementMale.className = 'elementMale';
+					elementMale.style.backgroundColor = 'rgba(0,0,160,0.5)';
+					//'rgba(0,127,127,' + ( Math.random() * 0.5 + 0.25 ) + ')';
 
 					var number = document.createElement( 'div' );
 					number.className = 'number';
 					number.textContent = (i/5) + 1;
-					element.appendChild( number );
+					elementMale.appendChild( number );
 
 					var symbol = document.createElement( 'div' );
 					symbol.className = 'symbol';
 					symbol.textContent = tableMale[ i ];
-					element.appendChild( symbol );
+					elementMale.appendChild( symbol );
 
 					var details = document.createElement( 'div' );
 					details.className = 'details';
 					details.innerHTML = tableMale[ i + 1 ] + '<br>' + tableMale[ i + 2 ];
-					element.appendChild( details );
+					elementMale.appendChild( details );
 
-					var object = new THREE.CSS3DObject( element );
+					var object = new THREE.CSS3DObject( elementMale );
 					object.position.x = Math.random() * 4000 - 2000;
 					object.position.y = Math.random() * 4000 - 2000;
 					object.position.z = Math.random() * 4000 - 2000;
@@ -187,29 +301,29 @@
 				}
 
 				// tableFemale
-
 				for ( var i = 0; i < tableFemale.length; i += 5 ) {
 
-					var element = document.createElement( 'div' );
-					element.className = 'element';
-					element.style.backgroundColor = 'rgba(0,127,127,' + ( Math.random() * 0.5 + 0.25 ) + ')';
+					var elementFemale = document.createElement( 'div' );
+					elementFemale.className = 'elementFemale';
+					elementFemale.style.backgroundColor = 'rgba(255,119,255,0.5)';
+					/*'rgba(0,127,127,' + ( Math.random() * 0.5 + 0.25 ) + ')';*/
 
 					var number = document.createElement( 'div' );
 					number.className = 'number';
 					number.textContent = (i/5) + 1;
-					element.appendChild( number );
+					elementFemale.appendChild( number );
 
 					var symbol = document.createElement( 'div' );
 					symbol.className = 'symbol';
 					symbol.textContent = tableFemale[ i ];
-					element.appendChild( symbol );
+					elementFemale.appendChild( symbol );
 
 					var details = document.createElement( 'div' );
 					details.className = 'details';
 					details.innerHTML = tableFemale[ i + 1 ] + '<br>' + tableFemale[ i + 2 ];
-					element.appendChild( details );
+					elementFemale.appendChild( details );
 
-					var object = new THREE.CSS3DObject( element );
+					var object = new THREE.CSS3DObject( elementFemale );
 					object.position.x = Math.random() * 4000 - 2000;
 					object.position.y = Math.random() * 4000 - 2000;
 					object.position.z = Math.random() * 4000 - 2000;
