Minor code changes

--- a/client/friendlist.html
+++ b/client/friendlist.html
@@ -64,10 +64,10 @@
 
 				.elementMale .symbol {
 					position: absolute;
-					top: 10px;
+					top: 30px;
 					left: 0px;
 					right: 0px;
-					font-size: 30px;
+					font-size: 22px;
 					font-weight: bold;
 					color: rgba(255,255,255,0.75);
 					text-shadow: 0 0 10px rgba(255,255,255,0.75);
@@ -113,10 +113,10 @@
 
 				.elementFemale .symbol {
 					position: absolute;
-					top: 10px;
+					top: 30px;
 					left: 0px;
 					right: 0px;
-					font-size: 30px;
+					font-size: 22px;
 					font-weight: bold;
 					color: rgba(255,255,255,0.75);
 					text-shadow: 0 0 10px rgba(255,255,255,0.75);
@@ -174,13 +174,13 @@
 				"Syafiq Rahim", "26", "Male", 1, 4,
 				"Najmi Radzi", "27", "Male", 1, 5,
 				"Amir Syazwan", "27", "Male", 1, 6,
-				"Amirul Aimansyah", "28", "Male", 1, 7,
+				"Amirul Aiman", "28", "Male", 1, 7,
 				"Collision Koh", "28", "Male", 2, 1,
 				"Ali Wahab", "28", "Male", 2, 2,
-				"Dzahiruddin Din", "26", "Male", 2, 3,
+				"Dzahirudin Din", "26", "Male", 2, 3,
 				"Wan Paat", "33", "Male", 2, 4,
 				"Hye Fir", "27", "Male", 2, 5,
-				"Tun Muhammad", "31", "Male", 2, 6,
+				"Tun Muhd", "31", "Male", 2, 6,
 				"Abdul Izri", "28", "Male", 2, 7,
 				"Ahmad Luqman", "27", "Male", 3, 1,
 				"Aizat Nazmi", "27", "Male", 3, 2,
@@ -197,10 +197,10 @@
 				"Kuku Besi", "17", "Male", 8, 2,
 				"Pendekar Awan", "18", "Male", 8, 3,
 				"Tendangan Berempah", "18", "Male", 8, 4,
-				"Muhammad Hudzaifah", "22", "Male", 8, 5,
+				"Muhd Hudzaifah", "22", "Male", 8, 5,
 				"Ali Baba", "19", "Male", 8, 6,
 				"Toke Tido", "17", "Male", 8, 7,
-				"ZuhairAz-Zawir", "23", "Male", 9, 1,
+				"Zuhair Az-Zawir", "23", "Male", 9, 1,
 				"Mustaffa Kamal", "32", "Male", 9, 2,
 				"Azim Aziz", "27", "Male", 9, 3,
 				"Faiz Razman", "21", "Male", 9, 4,
@@ -208,7 +208,7 @@
 				"Danny Romai", "22", "Male", 9, 6,
 				"Ikram Fadzli", "21", "Male", 9, 7,
 				"Nazril Ezanie", "25", "Male", 10, 1,
-				"Muhamad Zubey", "26", "Male", 10, 2,
+				"Muhd Zubey", "26", "Male", 10, 2,
 				"Khairul Ikhwan", "21", "Male", 10, 3,
 				"Ayie Milly", "24", "Male", 10, 4,
 				"Pembuat Dodol", "21", "Male", 10, 5,
@@ -220,11 +220,11 @@
 				"Wu Zhi Ru", "26", "Female",	4, 5,
 				"Jeen Ching", "26", "Female", 4, 6,
 				"Erin Adalina", "26", "Female", 4, 7,
-				"Alex Wong", "27", "Female", 5, 1,
-				"Alex Wong", "27", "Female", 5, 2,
-				"Alex Wong", "27", "Female", 5, 3,
-				"Alex Wong", "27", "Female", 5, 4,
-				"Alex Wong", "27", "Female", 5, 5,
+				"Rohiza Azraffi", "27", "Female", 5, 1,
+				"Haliza Ibrahim", "27", "Female", 5, 2,
+				"Faridah Mustaffa", "27", "Female", 5, 3,
+				"Nurul Jannah", "27", "Female", 5, 4,
+				"Joenne", "27", "Female", 5, 5,
 				"Alex Wong", "27", "Female", 5, 6,
 				"Alex Wong", "27", "Female", 5, 7,
 				"Alex Wong", "27", "Female", 6, 1,
