Minor code changes

--- a/client/friendlist.html
+++ b/client/friendlist.html
@@ -23,7 +23,8 @@
 			#info {
 				position: absolute;
 				width: 100%;
-				color: #ffffff;
+				color: rgba(255,255,255,0.75);
+				/*#ffffff;*/
 				padding: 5px;
 				font-family: Monospace;
 				font-size: 13px;
@@ -134,9 +135,11 @@
 				}
 
 			button {
-				color: rgba(127,255,255,0.75);
+				color: rgba(255,255,255,0.75);
+				/*rgba(127,255,255,0.75);*/
 				background: transparent;
-				outline: 1px solid rgba(127,255,255,0.75);
+				outline: 1px solid rgba(255,255,255,0.75);
+				/*rgba(127,255,255,0.75);*/
 				border: 0px;
 				padding: 5px 10px;
 				cursor: pointer;
@@ -220,26 +223,26 @@
 				"Wu Zhi Ru", "26", "Female",	4, 5,
 				"Jeen Ching", "26", "Female", 4, 6,
 				"Erin Adalina", "26", "Female", 4, 7,
-				"Rohiza Azraffi", "27", "Female", 5, 1,
-				"Haliza Ibrahim", "27", "Female", 5, 2,
-				"Faridah Mustaffa", "27", "Female", 5, 3,
-				"Nurul Jannah", "27", "Female", 5, 4,
-				"Joenne", "27", "Female", 5, 5,
-				"Alex Wong", "27", "Female", 5, 6,
-				"Alex Wong", "27", "Female", 5, 7,
-				"Alex Wong", "27", "Female", 6, 1,
-				"Alex Wong", "27", "Female", 6, 2,
-				"Alex Wong", "27", "Female", 6, 3,
-				"Alex Wong", "27", "Female", 6, 4,
-				"Alex Wong", "27", "Female", 6, 5,
-				"Alex Wong", "27", "Female", 6, 6,
-				"Alex Wong", "27", "Female", 6, 7,
-				"Alex Wong", "27", "Female", 7, 1,
-				"Alex Wong", "27", "Female", 7, 2,
-				"Alex Wong", "27", "Female", 7, 3,
-				"Alex Wong", "27", "Female", 7, 4,
-				"Alex Wong", "27", "Female", 7, 5,
-				"Alex Wong", "27", "Female", 7, 6,
+				"Rohiza Azraffi", "23", "Female", 5, 1,
+				"Haliza Ibrahim", "36", "Female", 5, 2,
+				"Faridah Mustaffa", "47", "Female", 5, 3,
+				"Nurul Jannah", "21", "Female", 5, 4,
+				"Joenne Luke", "23", "Female", 5, 5,
+				"Kimberly Marquez", "21", "Female", 5, 6,
+				"Anne Michelle", "229", "Female", 5, 7,
+				"Emily Smith", "25", "Female", 6, 1,
+				"Mary Ling", "35", "Female", 6, 2,
+				"Aki Chua", "37", "Female", 6, 3,
+				"Natasha Schwarzmuller", "31", "Female", 6, 4,
+				"Alice Dickinson", "25", "Female", 6, 5,
+				"Li Xia Xin", "17", "Female", 6, 6,
+				"Trina Siow", "21", "Female", 6, 7,
+				"Bella Nabila", "20", "Female", 7, 1,
+				"Nur Hidayah", "18", "Female", 7, 2,
+				"Erica Xu", "27", "Female", 7, 3,
+				"Guiling Zhang", "33", "Female", 7, 4,
+				"Latisha Lee", "19", "Female", 7, 5,
+				"Nur Syafina", "18", "Female", 7, 6,
 			];
 
 			var camera, scene, renderer;
