Minor code changes

--- a/client/friendlist.html
+++ b/client/friendlist.html
@@ -233,8 +233,8 @@
 				"Emily Smith", "25", "Female", 6, 1,
 				"Mary Ling", "35", "Female", 6, 2,
 				"Aki Chua", "37", "Female", 6, 3,
-				"Natasha Schwarzmuller", "31", "Female", 6, 4,
-				"Alice Dickinson", "25", "Female", 6, 5,
+				"Natasha Muller", "31", "Female", 6, 4,
+				"Alice Benjamin", "25", "Female", 6, 5,
 				"Li Xia Xin", "17", "Female", 6, 6,
 				"Trina Siow", "21", "Female", 6, 7,
 				"Bella Nabila", "20", "Female", 7, 1,
